--- a/highlights.html
+++ b/highlights.html
@@ -32,8 +32,10 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4">
-            <img src="/img/projects/mysaveditems.png" width="400" height="250" alt="Ford &raquo; My Saved Items"/>
-            <p class="muted"><em>2012, Team Detroit</em></p>
+            <div class="thumbnail">
+                <img src="/img/projects/mysaveditems.png" width="400" height="250" alt="Ford &raquo; My Saved Items"/>
+                <p class="caption muted"><em>2012 (Team Detroit)</em></p>
+            </div>
         </div>
     </div>
 
@@ -54,8 +56,10 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4">
-            <img src="/img/projects/onstar.png" width="400" height="250" alt="OnStar &raquo; Experience OnStar"/>
-            <p class="muted">2011, Digitas</p>
+            <div class="thumbnail">
+                <img src="/img/projects/onstar.png" width="400" height="250" alt="OnStar &raquo; Experience OnStar"/>
+                <p class="caption muted">2011 (Digitas)</p>
+            </div>
         </div>
     </div>
 
@@ -78,8 +82,10 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4">
-            <img src="/img/projects/reviews.png" width="400" height="250" alt="Ford &raquo; Ratings and Reviews"/>
-            <p class="muted">2012, Team Detroit</p>
+            <div class="thumbnail">
+                <img src="/img/projects/reviews.png" width="400" height="250" alt="Ford &raquo; Ratings and Reviews"/>
+                <p class="caption muted">2012 (Team Detroit)</p>
+            </div>
         </div>
     </div>
 
@@ -99,8 +105,10 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4">
-            <img src="/img/projects/stitches.png" width="400" height="250" alt="Stitches"/>
-            <p class="muted">2012</p>
+            <div class="thumbnail">
+                <img src="/img/projects/stitches.png" width="400" height="250" alt="Stitches"/>
+                <p class="caption muted">2012</p>
+            </div>
         </div>
     </div>
 
